Delphi Case Study/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: delphi
  labels:
    environment: prod
    project: delphi-case-study
    managed-by: terraform
